@@ -15,23 +15,20 @@ module ActiveScaffold
           end
         end
 
-        def _load_action_columns
-          if model.respond_to?(:bitfields) && model.bitfields.present?
-            model.bitfields.each do |column_name, options|
-              columns = options.keys.sort_by { |column| self.columns[column].weight }
-              %i[create update show subform].each do |action|
-                next unless actions.include? action
-                if send(action).columns.include? column_name
-                  send(action).columns.exclude column_name
-                  send(action).columns.add_subgroup(column_name) { |group| group.add(*columns) }
-                else
-                  send(action).columns.exclude(*columns)
-                end
+        def _setup_bitfields
+          return unless model.respond_to?(:bitfields) && model.bitfields.present?
+          model.bitfields.each do |column_name, options|
+            columns = options.keys.sort_by { |column| self.columns[column].weight }
+            %i[create update show subform].each do |action|
+              next unless actions.include? action
+              if send(action).columns.include? column_name
+                send(action).columns.exclude column_name
+                send(action).columns.add_subgroup(column_name) { |group| group.add(*columns) }
+              else
+                send(action).columns.exclude(*columns)
               end
             end
           end
-
-          super
         end
       end
     end
