@@ -7,6 +7,7 @@
 - Add as_main_div_data to override data attributes on main div
 - Add loading indicator to embedded scaffolds, display error if fails
 - Fix race condition in threadsafe mode with delayed setup
+- Add ActiveScaffold::Config::Core.after_config_callbacks, so custom methods or procs can be added to be called after active_scaffold config block (used by bitfields bridge)
 
 = 3.6.0.pre
 - Added threadsafety as tech preview, enabled with ActiveScaffold.threadsafe! in initializer.
